# CLUE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.md  build.sh  clue.pc.in
docs/: index.html
examples/builder/: builder.h  canvas.c  codegen.c  main.c  palette.c  properties.c
examples/demo/: Makefile  demo.h  main.c  page_3d.c  page_canvas.c  page_editor.c  page_form.c  page_list.c  page_splitter.c  page_table.c  page_tree.c  page_widgets.c
examples/hello/: main.c
examples/standalone/: Makefile  main.c  myapp
include/clue/: app.h  backend.h  box.h  button.h  canvas.h  checkbox.h  clipboard.h  clue.h  clue_widget.h  colorpicker.h  datepicker.h  dialog.h  dnd.h  draw.h  dropdown.h  event.h  file_dialog.h  font.h  grid.h  image.h  label.h  listview.h  menu.h  osk.h  overlay.h  progress.h  radio.h  renderer.h  scroll.h  scrollbar.h  separator.h  shortcut.h  signal.h  slider.h  spinbox.h  splitter.h  statusbar.h  style.h  table.h  tabs.h  (+10 more)
src/backends/drm/: drm.c  drm.h
src/backends/wayland/: wayland.c  wayland.h
src/backends/x11/: x11.c  x11.h
src/core/: backend_select.c  event.c  focus.c  widget.c  window.c
src/renderer/: font.c  font_internal.h  gl_renderer.c  gl_renderer.h
src/widgets/: app.c  box.c  button.c  canvas.c  checkbox.c  clipboard.c  clue_widget.c  colorpicker.c  datepicker.c  dialog.c  dnd.c  draw.c  dropdown.c  file_dialog.c  grid.c  image.c  label.c  listview.c  menu.c  osk.c  overlay.c  progress.c  radio.c  scroll.c  scrollbar.c  separator.c  shortcut.c  signal.c  slider.c  spinbox.c  splitter.c  statusbar.c  table.c  tabs.c  text_editor.c  text_input.c  theme.c  timer.c  toggle.c  toolbar.c  (+2 more)
